--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!-- site under construction brian mcgee  -->
 <!DOCTYPE html>
 <html lang="en">
@@ -18,6 +19,7 @@
 
 <!-- local style sheet  -->
 <link rel="stylesheet" href="css/temp.css">
+<link rel="stylesheet" href="css/grids.css">
 
 
 </head>
@@ -93,11 +95,20 @@
 </div> 
 <!-- =========== NAV-BAR END/========== -->
 
+
 <!-- ============ WRAPPER ============= -->
 <div class="wrapper row">
 
- 
- <div class="masthead">
+
+  
+  <div class="main">main - content area</div>
+  <div class="ad">ad - content area </div>
+  <div class="sidebar">sidebar - content area</div>
+
+
+
+  <!-- ========= MASTHEAD ============= -->
+  <div class="masthead">
    <div class="masthead-container">
     <h3>Quality craftsmanship</h3>
     <h1>Excellent Service</h1>
@@ -107,29 +118,175 @@
       <p>Total home repair</p>
     </div>
   </div>
- </div>
-</div>
-<!-- =========== WRAPPER END/========== -->
+  </div>
+  <!-- ======= MASTHEAD END/ ============= -->
 
-<!-- ============ FOOTER ============= -->
-<footer class="footer">
-  <div class="container-fluid bg-dark">
-    <div class="row justify-content-center">
-      <div class="text-center">
-        <p class="py-2 h5 text-warning text-uppercase text-elite">Call today 724.787.3758</p>
+  <!-- ============= SERVICES ============ -->
+  <section id="services" class="services section-bg">
+<div class="container" data-aos="fade-up">
+
+  <div class="section-header">
+    <h2>Services</h2>
+    <p>BRM  provides residential and commercial repair, building and maintenance. With over 20 years in the industry BRM has you covered. Licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
+  </div>
+
+  <div class="row gy-4">
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+      <div class="service-item  position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-mountain-city"></i>
+        </div>
+        <h3>Bathrooms Remodels</h3>
+        <p>We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel. </p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+        </div>
+        <h3>Custom Decks</h3>
+        <p>We repair all sorts of deck, handrail, posts and fences and more. Full service deck builds and fence installs. We repair and install anything wood.</p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-compass-drafting"></i>
+        </div>
+        <h3>Drywall and painting</h3>
+        <p>We can fix your walls just right. Drywall repairs and painting to complete install, we've got you covered. </p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-trowel-bricks"></i>
+        </div>
+        <h3>Tile and flooring</h3>
+        <p>We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel.</p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-helmet-safety"></i>
+        </div>
+        <h3>Door and windows</h3>
+        <p>We repair and install all sorts of exterior items including wood, trim and resealing. We also provide full replacements.</p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="fa-solid fa-arrow-up-from-ground-water"></i>
+        </div>
+        <h3>Installations</h3>
+        <p>Need something installed or assemblied, maybe even hung on a wall? We can help - we install your products!</p>
+        <a href="service-details.html" class="readmore stretched-link">Learn more <i
+            class="bi bi-arrow-right"></i></a>
+      </div>
+    </div>
+
+  </div>
+</div>
+  </section>
+  <!-- ========= SERVICES END/ =========== -->
+</div>
+<!-- ========== WRAPPER END/=========== -->
+
+
+<!-- ============ FOOTER ============== -->
+<footer id="footer" class="footer">
+
+  <div class="footer-content position-relative">
+    <div class="container">
+      <div class="row">
+  
+        <div class="col-lg-4 col-md-6">
+          <div class="footer-info">
+            <h3>BRM Contractors Inc</h3>
+            <p>
+              PO Box 66 <br>
+              Hannastown, PA 15635<br><br>
+              <strong>Phone:</strong> 724-787-3758<br>
+              <strong>Email:</strong> brianrmcgee@gmail.com<br>
+            </p>
+            <div class="social-links d-flex mt-3">
+              <a href="https://www.facebook.com/profile.php?id=100054525456256#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/facebook.jfif" alt="BRM"></img></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/sheild-handy.jpg" alt="BRM"></img></a>
+              <a href="http://www.brmcontractors.net" class="d-flex align-items-center justify-content-center"><img src="assets/logo/brm-ico.png" alt="BRM"></img></a>
+              <a href="#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/services.png" alt="BRM"></img></a>
+            </div>
+          </div>
+        </div>
+  
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Sitemap</h4>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact-brm.html">Connect with BRM</a></li>
+            <li><a href="#">Maintenance</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">Bathroom remodel</a></li>
+            <li><a href="#">Kitchen remodel</a></li>
+            <li><a href="#">Custom decks</a></li>
+            <li><a href="#">Roofing and Siding</a></li>
+            <li><a href="#">Wood Repairs</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">Handyman services</a></li>
+            <li><a href="#">Tile and laminate floor</a></li>
+            <li><a href="#">Wood and LVT floor</a></li>
+            <li><a href="#">Plumbing repairs</a></li>
+            <li><a href="#">Electrical repairs</a></li>
+          </ul>
+        </div>
+  
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">Drywall and Painting</a></li>
+            <li><a href="#">General home repair</a></li>
+            <li><a href="#">Installations</a></li>
+            <li><a href="#">Maintenance</a></li>
+            <li><a href="#">Handyman services</a></li>
+          </ul>
+        </div>
+  
       </div>
     </div>
   </div>
-</footer>
-<!-- =========== FOOTER END/========== -->
-
-
   
-
-
-
-
-
+</footer>
+<!-- =========== FOOTER END/=========== -->
 
 
 <script src="js/main.js"></script>
