--- a/index.html
+++ b/index.html
@@ -100,14 +100,66 @@
 <div class="wrapper row">
 
 
-  
-  <div class="main">main - content area</div>
-  <div class="ad">ad - content area </div>
-  <div class="sidebar">sidebar - content area</div>
 
+  <!-- ============ MAIN ================= -->
+  <div class="main">
+    <div class="overflow-hidden" style="max-height: 45vh;">
+      <div class="container px-5 ">
+        <img src="assets/gallery/siding-corner.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="700" height="500" loading="lazy">
+      </div>
+    </div>
+    <div class="px-4 pt-0 my-0 text-center border-bottom">
+      <h1 class="display-5 text-red text-roboto text-uppercase bold">The incredible handyman</h1>
+      <div class="col-md-8 mx-auto">
+        <p class="lead mb-4">Chances are if it's broke - we can fix it. Give us a call today 
+          and one of our technicians will arrive and diagnose the problem. Provide insight 
+          and a solution. With over 20 years in the construction industry BRM has you covered. 
+          We are a family owned and operated company serving the Western PA area. Licensed and fully insured.</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+          <button type="button" class="btn btn-outline btn-lg px-4 me-sm-3"><a href="services.html" class="text-white text-decoration">Services</a></button>
+          <button type="button" class="btn btn-outline btn-lg px-4"><a href="contacts.html" class="text-white text-decoration">Contact BRM</a></button>
+        </div>
+      </div>
 
+    </div>
 
-  <!-- ========= MASTHEAD ============= -->
+  </div>
+  <!-- ========== MAIN END/=============== -->
+
+  <!-- ============ SIDEBAR ============== -->
+  <div class="sidebar">
+    <div class="h-100 p-5 bg-light border rounded-3 text-center">
+      <div>
+        <h2 class="h3 text-red text-roboto">BRM is total service - Licensed and Fully Insured</h2>
+      </div>
+      <p class="lead text-dark py-3">With over 20 years experience solving home repair problems BRM has you covered. 
+        Chances are if it's broke, we can fix it. Give us a call 
+        today and one of our technicians will arrive and diagnose the problem. 
+        Provide insight and offer a solution. We are at your services. 
+        </p>
+         <div class="text-center">
+          <img src="assets/logo/sheild-handy.jpg" class="img-thumbnail" alt="Total Service by BRM" style="width:100px;">
+         </div>
+    </div>
+  </div>
+  <!-- ========= SIDEBAR END/============= -->
+
+  <!-- ============ AD =================== -->
+  <div class="ad">
+    <div class="h-100 p-5 bg-dark rounded-3 text-center">
+      <h2 class="h3 text-white text-roboto">Quality home repair and maintainence </h2>
+      <p class="lead text-white py-3">Keeping up with a property is a lot of work - We can help. BRM can offer solutions
+         for all of your home or business repair and maintenance needs. From bathroom remodeling 
+         to putting in windows or putting up that beautiful deck you always wanted. BRM has you covered. 
+         We even offer hauling, clean up and debris removal. Connect today for a FREE estimate. </p>
+         <div class="text-center">
+          <img src="assets/logo/services.png" class="img-thumbnail" alt="Services by BRM" style="width:100px;">
+         </div>
+    </div>
+  </div>
+  <!-- ========= AD END/ ================= -->
+
+  <!-- ========= MASTHEAD ================ -->
   <div class="masthead">
    <div class="masthead-container">
     <h3>Quality craftsmanship</h3>
@@ -121,12 +173,12 @@
   </div>
   <!-- ======= MASTHEAD END/ ============= -->
 
-  <!-- ============= SERVICES ============ -->
+  <!-- ========= SERVICES ================ -->
   <section id="services" class="services section-bg">
 <div class="container" data-aos="fade-up">
 
   <div class="section-header">
-    <h2>Services</h2>
+    <h2 class="display-6 text-red text-roboto">Services</h2>
     <p>BRM  provides residential and commercial repair, building and maintenance. With over 20 years in the industry BRM has you covered. Licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
   </div>
 
@@ -207,7 +259,7 @@
   </div>
 </div>
   </section>
-  <!-- ========= SERVICES END/ =========== -->
+  <!-- ======= SERVICES END/ ============= -->
 </div>
 <!-- ========== WRAPPER END/=========== -->
 
@@ -289,12 +341,13 @@
 <!-- =========== FOOTER END/=========== -->
 
 
+
+
 <script src="js/main.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 
 </body>
 </html>
