--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
    <div class="container">
 
     <div class="section-header">
-      <h2 class="display-6 text-red text-roboto">Services</h2>
+      <h2 class="display-6">Services</h2>
       <p>BRM  provides residential and commercial repair, building and maintenance. With over 20 years in the industry BRM has you covered. Licensed and insured providing the Western PA area quality craftsmanship and affordable pricing. Call or connect with us today for a FREE estimate.</p>
     </div>
     <!-- CARD ROWS  -->
@@ -199,7 +199,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Bathroom remodeling</h5>
+              <h5 class="card-title">Bathrooms</h5>
               <img style="height:250px;"  src="assets/gallery/bathroom1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
               <p class="card-text">We repair all things bathroom! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full bathroom remodel</p>
@@ -212,7 +212,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Drywall and painting</h5>
+              <h5 class="card-title">Painting</h5>
               <img style="height:250px;"  src="assets/gallery/drywall1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
               <p class="card-text">We can fix your walls just right. Drywall repairs and painting to complete install, we've got you covered.</p>
@@ -225,7 +225,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Kitchen remodeling</h5>
+              <h5 class="card-title">Kitchens</h5>
               <img style="height:250px;"  src="assets/gallery/kitchen.png" class="card-img-top" alt="...">
               <div class="card-body">
               <p class="card-text">We repair all things kitchen! BRM offers installation services for fixtures, lights, plumbing flooring and more. We also offer full kitchen remodel and appliance installation.</p>
@@ -238,7 +238,7 @@
         <div class="col-lg-4 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Handyman services</h5>
+              <h5 class="card-title">Handyman</h5>
               <img style="height:250px;"  src="assets/gallery/siding-lift.png" class="card-img-top" alt="...">
               <div class="card-body">
               <p class="card-text">Need something fixed or repaired, maybe even hung on a wall? We can help - we install your products! We also access steep and tall.</p>
