--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>--BRM</title>
+<title>Home -  BRM Contractors Inc</title>
 <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
@@ -152,10 +152,7 @@
 
       </div>
       <div class="sidebar-info">
-        <p class="lead text-dark text-mont py-3">With over 20 years experience solving home repair problems BRM has you covered. 
-          Chances are if it's broke, we can fix it. Give us a call 
-          today and one of our technicians will arrive and diagnose the problem. 
-          Provide insight and offer a solution. We are at your services. 
+        <p class="lead text-dark text-mont py-3">Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
         </p>
         <div class="sidebar-img text-center">
           <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:100px;">
@@ -180,7 +177,7 @@
         </p>
       </div>
       <div class="ad-title">
-        <h2 class="">Licensed and Fully Insured</h2>
+        <h2><span>License PA112369</span><br>Fully Insured</h2>
       </div>
 
     </div>
