--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="format-detection" content="telephone=no">
+
 <title>Home -  BRM Contractors Inc</title>
 <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
@@ -72,7 +74,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="about.html">About BRM</a>
-            <a class="dropdown-item" href="contact-brm.html">Contact Info</a>
+            <a class="dropdown-item" href="contact-brm.html">Contact</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -91,7 +93,7 @@
           </div>
         </li>
                 <li class="nav-item">
-          <a class="nav-link" id="lastNav" href="contact-brm.html">Contact Us</a>
+          <a class="nav-link" id="lastNav" href="contact-brm.html">Connect with BRM</a>
         </li>
     </div>
   </nav>
@@ -145,12 +147,6 @@
   <!-- ============ SIDEBAR ============== -->
   <div class="sidebar">
     <div class="sidebar-card ">
-      <div class="sidebar-title">
-        <h2 class="">Call today  
-          <br><span>(724) 787-3758</span> 
-          <br>FREE Estimate</h2>
-
-      </div>
       <div class="sidebar-info">
         <p class="lead text-dark text-mont py-3">Call us today for all your home repair needs. Whether it be a honey do list to a complete remodel and rebuild, BRM can help! We offer drywall and painting, wood repair, roofing and siding repair and all sorts of remodeling. 
         </p>
@@ -158,7 +154,11 @@
           <img src="assets/logo/sheild-handy.jpg" class="" alt="Total Service by BRM" style="width:100px;">
         </div>
       </div>
-
+      <div class="sidebar-title">
+        <h2 class="">Call today  
+          <br><span>(724) 787-3758</span> 
+          <br>FREE Estimate</h2>
+      </div>
     </div>
   </div>
   <!-- ========= SIDEBAR END/============= -->
@@ -333,12 +333,14 @@
             <p>
               PO Box 66 <br>
               Hannastown, PA 15635<br><br>
-              <strong>Phone:</strong> 724-787-3758<br>
-              <strong>Email:</strong> brianrmcgee@gmail.com<br>
+              <span><i class="fa-solid fa-phone" style="color:#c8be06;"></i></i></span> <strong>Phone:</strong> 724-787-3758<br>
+              <span><i class="fa-light fa-at" style="color:#c8be06;font-size:20px;"></i></span><strong>Email:</strong> brianrmcgee@gmail.com<br>
             </p>
             <div class="social-links d-flex mt-3">
+              
               <a href="https://www.facebook.com/profile.php?id=100054525456256#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/facebook.jfif" alt="BRM"></img></a>
               <a href="http://www.brmcontractors.net" class="d-flex align-items-center justify-content-center"><img src="assets/logo/brm-ico.png" alt="BRM"></img></a>
+              <a href="mailto:brianrmcgee@gmail.com" class="d-flex align-items-center justify-content-center"><img src="assets/logo/email.png" alt="BRM"></img></a>
             </div>
           </div>
         </div>
