--- a/contact-brm.html
+++ b/contact-brm.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Connect with BRM</title>
+<title>Connect - BRM Contractors Inc</title>
 <link rel="icon" href="assets/logo/brm-ico.png" sizes="32x32" />
 
 <!-- Latest compiled and minified CSS -->
@@ -16,8 +16,13 @@
 <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-<!-- local style sheet  -->
-<link rel="stylesheet" href="css/temp.css">
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/8ab1cf7876.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://kit.fontawesome.com/8ab1cf7876.css" crossorigin="anonymous"> 
+
+<!-- local style sheet by brm  -->
+<link rel="stylesheet" href="css/temp.css" type="text/css">
+
 <!--.footer-bar bar fixed  -->
 
             <!-- ============= JOTFORM =================== -->
@@ -62,7 +67,7 @@
   <!-- =========  NAVBAR ==========  -->
   <nav class="navbar navbar-expand-lg navbar-light bg-main">
     <a class="navbar-brand" href="#">
-      <img class="ms-2 rounded" src="assets/logo/brm-ico.png" alt="BRM">
+      <i class="fa-solid fa-house h2 pt-2 ps-2"></i>
     </a>
     <a class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="menu-icon" onclick="iconSwap(this)">
@@ -79,13 +84,14 @@
         <li class="nav-item active">
           <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
         </li>
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#about.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             About Us
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="about.html">About BRM</a>
-            <a class="dropdown-item" href="contact-brm.html">Contact Info</a>
+            <a class="dropdown-item" href="contact-brm.html">Contact</a>
           </div>
         </li>
         <li class="nav-item dropdown">
@@ -93,18 +99,21 @@
             Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Drywall and Painting</a>
-            <a class="dropdown-item" href="#">Custom Decks</a>
-            <a class="dropdown-item" href="#">Bathroom Remodel</a>
-            <a class="dropdown-item" href="#">Kitchen Remodel</a>
-            <a class="dropdown-item" href="#">Handyman Services</a>
+            <a class="dropdown-item" href="#services">Drywall and Painting</a>
+            <a class="dropdown-item" href="#services">Custom Decks</a>
+            <a class="dropdown-item" href="#services">Bathroom Remodel</a>
+            <a class="dropdown-item" href="#services">Kitchen Remodel</a>
+            <a class="dropdown-item" href="#services">Handyman Services</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">
-              <button class="btn btn-outline-dark">Schedule</button> </a>
+              <button type="button" class="btn btn-outline" data-toggle="modal" data-target="#exampleModalCenter">
+                Schedule
+              </button>
+            </a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact-brm.html">Contact Us</a>
+                <li class="nav-item">
+          <a class="nav-link" id="lastNav" href="contact-brm.html">Connect with BRM</a>
         </li>
     </div>
   </nav>
@@ -207,6 +216,34 @@
   
 </footer>
 <!-- =========== FOOTER END/=========== -->
+
+<!-- =======---==== MODAL ==============  -->
+        <!-- temp - alert for scheduling portal to call office  -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="schedule-message" id="schedule">
+          <h5>Scheduling unavailable</h5>
+          <p>Please call the office at (724) 787-3758 or send us a message</p>
+          <h5></h5>
+          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+          <hr>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ========= MODAL END/ ==============  -->
 
 <!-- local js  -->
 <script src="js/main.js"></script>
