--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <script src="https://kit.fontawesome.com/8ab1cf7876.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://kit.fontawesome.com/8ab1cf7876.css" crossorigin="anonymous"> 
 
-<!-- local style sheet  -->
-<link rel="stylesheet" href="css/temp.css">
-<link rel="stylesheet" href="css/grids.css">
+<!-- local style sheet by brm  -->
+<link rel="stylesheet" href="css/temp.css" type="text/css">
+<link rel="stylesheet" href="css/grids.css" type="text/css"> <!-- page specific -->
 
 
 </head>
@@ -89,7 +89,10 @@
             <a class="dropdown-item" href="#services">Handyman Services</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">
-              <button class="btn btn-outline-dark">Schedule</button> </a>
+              <button type="button" class="btn btn-outline" data-toggle="modal" data-target="#exampleModalCenter">
+                Schedule
+              </button>
+            </a>
           </div>
         </li>
                 <li class="nav-item">
@@ -362,6 +365,34 @@
   
 </footer>
 <!-- =========== FOOTER END/=========== -->
+
+<!-- =======---==== MODAL ==============  -->
+        <!-- temp - alert for scheduling portal to call office  -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="schedule-message" id="schedule">
+          <h5>Scheduling unavailable</h5>
+          <p>Please call the office at (724) 787-3758 or send us a message</p>
+          <h5></h5>
+          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+          <hr>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ========= MODAL END/ ==============  -->
 
 
 
