--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-<!-- site under construction brian mcgee  -->
+<!-- site under construction brian mcgee 2023  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -325,7 +324,6 @@
 
 <!-- ============ FOOTER ============== -->
 <footer id="footer" class="footer">
-
   <div class="footer-content position-relative">
     <div class="container">
       <div class="row">
@@ -340,7 +338,6 @@
               <span><i class="fa-light fa-at" style="color:#c8be06;font-size:20px;"></i></span><strong>Email:</strong> brianrmcgee@gmail.com<br>
             </p>
             <div class="social-links d-flex mt-3">
-              
               <a href="https://www.facebook.com/profile.php?id=100054525456256#" class="d-flex align-items-center justify-content-center"><img src="assets/logo/facebook.jfif" alt="BRM"></img></a>
               <a href="http://www.brmcontractors.net" class="d-flex align-items-center justify-content-center"><img src="assets/logo/brm-ico.png" alt="BRM"></img></a>
               <a href="mailto:brianrmcgee@gmail.com" class="d-flex align-items-center justify-content-center"><img src="assets/logo/email.png" alt="BRM"></img></a>
@@ -381,7 +378,6 @@
         <div class="schedule-message" id="schedule">
           <h5>Scheduling unavailable</h5>
           <p>Please call the office at (724) 787-3758 or send us a message</p>
-          <h5></h5>
           <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
         </div>
       </div>
