general changes to contact

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <div class="schedule-message" id="schedule">
           <h5>Scheduling unavailable</h5>
           <p>Please call the office at (724) 787-3758 or send us a message</p>
-          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
         </div>
       </div>
       <div class="modal-footer">
