--- a/about.html
+++ b/about.html
@@ -123,8 +123,7 @@
         <div class="main">
           <div class="overflow-hidden" style="max-height: 60vh;">
             <div class="container px-5 ">
-              <img src="assets/logo/brm-3.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="400" height="300" loading="lazy">
-              
+              <img src="assets/logo/brm-3.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 mx-auto d-block" alt="BRM - Home" width="400" height="300" loading="lazy"> 
             </div>
           </div>
           <div class="px-4 pt-0 my-0 text-center border-bottom">
@@ -240,31 +239,29 @@
 
 
 <!-- =======---==== MODAL ==============  -->
-<!-- temp - alert for scheduling portal to call office  -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="schedule-message" id="schedule">
-          <h5>Scheduling unavailable</h5>
-          <p>Please call the office at (724) 787-3758 or send us a message</p>
-          <h5></h5>
-          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
-          <hr>
+  <!-- temp - alert for scheduling portal to call office  -->
+    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="schedule-message" id="schedule">
+              <h5>Scheduling unavailable</h5>
+                <p>Please call the office at (724) 787-3758 or send us a message</p>
+                <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+          </div>
         </div>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-      </div>
     </div>
-  </div>
-</div>
 <!-- ========= MODAL END/ ==============  -->
 
 
