--- a/contact-brm.html
+++ b/contact-brm.html
@@ -138,9 +138,9 @@
     <div class="connect-container" style="padding-bottom: 300px;">
         <div class="connect-heading">
             <div class="connect-content">
-                <img class="rounded mx-auto-d-block" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">
-                <h1 class="pt-5 py-1">Connect with BRM</h1> 
-                <p class="py-1">Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>    
+                <h1>Connect with BRM</h1> 
+                <p >Leave us your information and a brief description of the services needed and we would be happy to get back with you.</p>
+                <img class="rounded mx-auto-d-block" src="assets/logo/free-estimate.png" alt="BRM" style="width:200px;">   
             </div>
         </div>
         <div class="connect-form">
@@ -219,31 +219,29 @@
 
 <!-- =======---==== MODAL ==============  -->
         <!-- temp - alert for scheduling portal to call office  -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="schedule-message" id="schedule">
-          <h5>Scheduling unavailable</h5>
-          <p>Please call the office at (724) 787-3758 or send us a message</p>
-          <h5></h5>
-          <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Popover title" data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
-          <hr>
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">BRM Contractors Inc</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span class="ps-1 pe-1" aria-hidden="true"> <i class="fa-solid fa-xmark" style="font-size:28px;"></i> </span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <div class="schedule-message" id="schedule">
+                  <h5>Scheduling unavailable</h5>
+                  <p>Please call the office at (724) 787-3758 or send us a message</p>
+                  <a href="contact-brm.html" role="button" class="btn btn-outline popover-test" title="Connect with BRM Contractors Inc." data-content="Popover body content is set in this attribute.">Send BRM a Message</a>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-success" data-dismiss="modal">OK</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- ========= MODAL END/ ==============  -->
+        <!-- ========= MODAL END/ ==============  -->
 
 <!-- local js  -->
 <script src="js/main.js"></script>
