--- a/index.html
+++ b/index.html
@@ -88,9 +88,7 @@
             <a class="dropdown-item" href="#services">Handyman Services</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">
-              <button type="button" class="btn btn-outline" data-toggle="modal" data-target="#exampleModalCenter">
-                Schedule
-              </button>
+              <button type="button" class="btn btn-outline" data-toggle="modal" data-target="#exampleModalCenter">Schedule</button>
             </a>
           </div>
         </li>
